# legislative-challenge

./: Makefile  QUESTIONS.md  README.md  pyproject.toml
project/: Makefile  manage.py
project/api/: apps.py  serializers.py  urls.py  views.py
project/authentication/: apps.py  forms.py  views.py
project/authentication/templates/: base.html  login.html  register.html
project/portal/: admin.py  apps.py  forms.py  handlers.py  models.py  tables.py  urls.py  views.py
project/portal/migrations/: 0001_initial.py  0002_alter_bill_title.py
project/portal/static/js/: tabledefs.js
project/portal/templates/: base.html  bills.html  home.html  legislators.html  upload.html
project/project/: settings.py  urls.py
