[tool.poetry]
name = "legislative-challenge"
version = "0.1.0"
description = "Coding challenge with legislative data"
authors = ["Erick Rodrigues <erick@erod.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"
djangorestframework = "^3.15.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.1.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "100"

[tool.black]
line-length = 100

[tool.isort]
profile = 'black'
